--- a/CircleTipsApp/CircleTips/src/main/AndroidManifest.xml
+++ b/CircleTipsApp/CircleTips/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="16" />
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.android.browser.permission.READ_HISTORY_BOOKMARKS" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
     <application
