added long click to buttons

--- a/CircleTipsApp/CircleTips/src/main/AndroidManifest.xml
+++ b/CircleTipsApp/CircleTips/src/main/AndroidManifest.xml
@@ -22,13 +22,13 @@
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.airwhip.circle.tips.PreviewActivity"
-            android:label="@string/title_activity_preview" >
+            android:label="@string/title_activity_preview"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
