--- a/CircleTipsApp/CircleTips/src/main/AndroidManifest.xml
+++ b/CircleTipsApp/CircleTips/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity
             android:name="com.airwhip.circle.tips.WelcomeActivity"
             android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
